add styles for popup

--- a/prepros.config
+++ b/prepros.config
@@ -878,6 +878,13 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "blocks/form/__link/form__link.scss",
+        "config": {
+          "compileImported": true
+        }
+      }
+    ]
   }
 }
