use pixel perfect for popup on mobile devices

--- a/prepros.config
+++ b/prepros.config
@@ -878,13 +878,6 @@
         }
       }
     },
-    "files": [
-      {
-        "file": "blocks/form/__link/form__link.scss",
-        "config": {
-          "compileImported": true
-        }
-      }
-    ]
+    "files": []
   }
 }
